# project_3_cosmo

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup[TBD].py
results/: example_run.py
scr/: simul.py
scripts/: 1D_sinewavetest.py  analyse_data.py  example_LambdaCDM.py  example_amplitudes.py  example_eds.py  example_matthieu.py  example_random.py  example_run.py  generate_IC.py  interactive.py  largerun.py  profiling.py  testrun.py  zeldovich.py
src/: simulation.py
src/cosmosim/: __main__.py  simulation.py  utils.py
tests/: generate_IC.py  inspect_growth.py  interactive.py  testrun.py  testrun2.py
